--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ repositories {
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
+	compile('org.springframework.boot:spring-boot-starter-security')
 	compile('org.apache.derby:derby:10.12.1.1')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
