--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.jpa.database-platform=org.hibernate.dialect.DerbyTenSevenDialect
 spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate4.SpringSessionContext
+#TODO remove next 2 debug props
 logging.level.org.hibernate.SQL=TRACE
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
