--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('org.springframework.boot:spring-boot-starter-security')
+    compile("org.aspectj:aspectjweaver:1.8.8")
 	compile('org.apache.derby:derby:10.12.1.1')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
