--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.jpa.database-platform=org.hibernate.dialect.DerbyTenSevenDialect
 spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate4.SpringSessionContext
-#TODO remove next 2 debug props
-logging.level.org.hibernate.SQL=TRACE
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+geo.service.loaction=https://ipfind.co/
+geo.service.security.key=d0fae33c-6f60-4205-9bdf-fe92f980eed5
+geo.service.default.country.code=LV
