Loan validation and apply call limit

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.jpa.properties.hibernate.current_session_context_class=org.springframewor
 geo.service.loaction=https://ipfind.co/
 geo.service.security.key=d0fae33c-6f60-4205-9bdf-fe92f980eed5
 geo.service.default.country.code=LV
+
+max.loan.aplly.service.calls.per.second.for.single.country=1
