--- a/build.gradle
+++ b/build.gradle
@@ -33,5 +33,6 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-security')
     compile("org.aspectj:aspectjweaver:1.8.8")
 	compile('org.apache.derby:derby:10.12.1.1')
+	compile('org.apache.commons:commons-collections4:4.1')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
