--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ apply plugin: 'spring-boot'
 
 jar {
 	baseName = 'loanDemo'
-	version = '0.0.1-SNAPSHOT'
+	version = '1.0.0'
 }
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
